Päivitä Android-työkalut ja laatutarkistukset